--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Provides a server that can interact with luminave over WebSockets to control USB DMX512 controllers",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.node.config.js",
     "start": "npm-run-all --parallel watch:server watch:build",
-    "watch:build": "webpack --watch",
+    "watch:build": "webpack --config webpack.node.config.js --watch",
     "watch:server": "nodemon --inspect=\"9229\" \"./build/bundle.js\" --watch \"./build\" ",
     "test": "jest",
-    "prepare": "ln -s ../node_modules/@serialport/bindings/build/Release/ build/Release"
+    "prepare": "ln -s ../node_modules/@serialport/bindings/build/Release/ build/Release",
+    "clean": "rimraf umd docs/*.js docs/*.map",
+    "jsdoc": "jsdoc2md --heading-depth 2 --partial .github/scope.hbs --template .github/API_template.md --files example.js > docs/API.md",
+    "toc": "markdown-toc -i README.md",
+    "semantic-release": "semantic-release",
+    "travis-deploy-once": "travis-deploy-once"
   },
   "repository": {
     "type": "git",
@@ -34,11 +39,21 @@
     "serialport": "^7.1.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^2.0.2",
+    "@semantic-release/git": "^4.0.3",
+    "babel-jest": "^22.4.3",
+    "cross-env": "^5.1.4",
+    "eslint": "^4.19.1",
+    "jest": "^22.4.3",
+    "jsdoc-to-markdown": "^4.0.1",
+    "markdown-toc": "^1.2.0",
+    "rimraf": "^2.6.2",
+    "semantic-release": "^15.1.7",
+    "travis-deploy-once": "^5.0.0",
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
     "babel-loader": "^8.0.4",
     "babel-preset-latest-node": "^2.0.0-beta.3",
-    "node-hot-loader": "^1.12.2",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
     "webpack": "^4.26.1",
