chore(npm start): Fixed path to npm-run-all

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack.node.config.js",
-    "start": "npm-run-all --parallel watch:server watch:build",
+    "start": "./node_modules/.bin/npm-run-all --parallel watch:server watch:build",
     "watch:build": "webpack --config webpack.node.config.js --watch",
     "watch:server": "nodemon --inspect=\"9229\" \"./build/bundle.js\" --watch \"./build\" ",
     "test": "jest",
