--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack.node.config.js",
+    "bundle": "webpack --config webpack.node-bundle.config.js",
     "start": "./node_modules/.bin/npm-run-all --parallel watch:server watch:build",
     "watch:build": "webpack --config webpack.node.config.js --watch",
     "watch:server": "nodemon --inspect=\"9229\" \"./build/bundle.js\" --watch \"./build\" ",
